--- a/Front-end/package.json
+++ b/Front-end/package.json
@@ -15,13 +15,13 @@
     "@tailwindcss/vite": "^4.0.1",
     "axios": "^1.7.9",
     "framer-motion": "^11.18.2",
+    "lucide-react": "^0.479.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
     "react-multi-carousel": "^2.8.5",
     "react-parallax-tilt": "^1.7.276",
     "react-router-dom": "^7.1.3",
-    "tailwindcss": "^4.0.1",
     "three": "^0.167.1"
   },
   "devDependencies": {
@@ -29,11 +29,14 @@
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
     "@vitejs/plugin-react": "^4.3.4",
+    "autoprefixer": "^10.4.21",
     "eslint": "^9.17.0",
     "eslint-plugin-react": "^7.37.2",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.16",
     "globals": "^15.14.0",
+    "postcss": "^8.5.3",
+    "tailwindcss": "^4.0.13",
     "vite": "^6.0.5"
   }
 }
