--- a/Front-end/package.json
+++ b/Front-end/package.json
@@ -15,6 +15,7 @@
     "@tailwindcss/vite": "^4.0.1",
     "axios": "^1.7.9",
     "framer-motion": "^11.18.2",
+    "gsap": "^3.12.7",
     "lucide-react": "^0.479.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
