--- a/Front-end/package.json
+++ b/Front-end/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
     "@headlessui/react": "^2.2.0",
     "@react-spring/web": "^9.7.5",
     "@tailwindcss/vite": "^4.0.1",
