--- a/Front-end/package.json
+++ b/Front-end/package.json
@@ -15,15 +15,18 @@
     "@react-spring/web": "^9.7.5",
     "@tailwindcss/vite": "^4.0.1",
     "axios": "^1.7.9",
+    "debounce": "^2.2.0",
     "framer-motion": "^11.18.2",
     "gsap": "^3.12.7",
     "lucide-react": "^0.479.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
+    "react-lazyload": "^3.2.1",
     "react-multi-carousel": "^2.8.5",
     "react-parallax-tilt": "^1.7.276",
     "react-router-dom": "^7.1.3",
+    "sharp": "^0.34.1",
     "three": "^0.167.1"
   },
   "devDependencies": {
